--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           <div class="content">
             <img src="https://cdna.artstation.com/p/assets/images/images/026/984/246/large/rafaella-trajano-1020soraka.jpg?1590267043" class="small_img" alt="" style="width:100%">
             <h3>Nightbringer Soraka</h3>
-            <p>Arte da skin Nightbringer Soraka saindo das montanhas com o seu poder
-              divino.
+            <p>Arte da skin Nightbringer Soraka.
             </p>
           </div>
         </div>
@@ -73,15 +72,14 @@
       </div>
       <div class="content-yi">
         <img src="https://cdnb.artstation.com/p/assets/images/images/020/401/767/large/rafaella-trajano-758yi.jpg?1567628136" class="small_img" alt="" style="width:100%">
-        <h3>First work on stream: PROJECT: Yi</h3>
-        <p>Esse foi o meu trabalho feito nas lives na Twitch. Feito no Autodesk Sketchbook,
+        <h3>Primeiro trabalho na Stream: PROJECT: Yi</h3>
+        <p>Trabalho feito durante livestream na plataforma Twitch. Feito no Autodesk Sketchbook,
           essa arte demandou 2 lives para ser concluída e está no tamanho para wallpaper.
         </p>
       </div>
       <div class="finalizacao">
-        <p>Enfim, espero que tenha gostado das artes postadas aqui. Cada arte foi feita com o maior
-          carinho, estudando arduamente para alcançar um bom resultado.
-          Pra me contactar, entre em contato comigo nas minhas redes sociais.
+        <p>
+          Contato pelas redes sociais:
         </p>
        
     </div>
@@ -96,7 +94,7 @@
   <footer>
     <div class="copyright">
       <p>TRAJANO, Rafaella;2020.</p>
-      <p>League of Legends é da empresa Riot Games e eu apenas fiz as artes. 
+      <p>League of Legends é da empresa Riot Games e eu apenas fiz as artes.  Site criado por Rafaella Trajano. 
         Caso queira compartilhar, utilize o link da arte ou entre em contato com o meu Twitter.</p>
     </div>
       
