--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>    
   <head>
-      <meta charset="utf-8">
+      <meta charset="utf-8">      
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      
       <title>Bem-vindo ao meu portfólio</title>
       
       <!-- css -->
